# philanthropy_suite

./: .gitignore  docker-compose.yml  package.json
backend/: pyproject.toml
backend/app/: logic.py  main.py
backend/tests/: conftest.py
backend/tests/integration_tests/: test_api.py
backend/tests/unit_tests/: test_logic.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: calculate.ts
frontend/src/components/: Header.tsx  ProjectCard.tsx  testcomponent.tsx
